Optimisation dans la récupération des données Zelty

--- a/bin/config.inc.example
+++ b/bin/config.inc.example
@@ -1,2 +1,3 @@
 ZELTY_AUTH_BEARER="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx=="
+ZELTY_DAYS=30
 GOOGLE_CAL_URL_WITH_KEY='https://calendar.google.com/calendar/v3/calendars/ID/events?key=KEY'
